--- a/packages/ray/lib/components/form-item/_form-item.scss
+++ b/packages/ray/lib/components/form-item/_form-item.scss
@@ -7,9 +7,9 @@
     display: block;
     color: $ray-color-text-medium;
     font-weight: 400;
-    font-size: $field-label-size-focus;
+    font-size: $ray-field-label-size-focus;
     margin-top: 0.25rem;
-    margin-left: $field-h-spacing;
+    margin-left: $ray-field-h-spacing;
     line-height: 1;
     width: 100%;
     text-overflow: ellipsis;
