--- a/packages/ray/lib/components/table/_table.scss
+++ b/packages/ray/lib/components/table/_table.scss
@@ -10,7 +10,7 @@
 
   th {
     font-size: 12px;
-    font-family: $font-stack-mono;
+    font-family: $ray-font-stack-mono;
     color: $ray-color-gray-60;
     text-align: left;
     text-transform: uppercase;
