--- a/packages/ray/lib/global/_base.scss
+++ b/packages/ray/lib/global/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: $font-stack-sans-serif;
+  font-family: $ray-font-stack-sans-serif;
   color: $ray-color-text-dark;
   min-height: 100vh;
   display: flex;
