--- a/packages/ray/lib/components/card/_card.scss
+++ b/packages/ray/lib/components/card/_card.scss
@@ -3,7 +3,7 @@ $card-border-color: $ray-color-gray-10;
 
 .#{$prefix}card {
   width: 100%;
-  border-radius: $border-radius;
+  border-radius: $ray-border-radius;
   background-color: $ray-color-white;
   overflow: hidden;
   height: 100%;
@@ -16,8 +16,8 @@ $card-border-color: $ray-color-gray-10;
     border: 1px solid $card-border-color;
 
     &:not(:first-child) {
-      border-bottom-left-radius: $border-radius;
-      border-bottom-right-radius: $border-radius;
+      border-bottom-left-radius: $ray-border-radius;
+      border-bottom-right-radius: $ray-border-radius;
       border-top: 0;
     }
   }
