--- a/packages/ray/lib/components/select/_select.scss
+++ b/packages/ray/lib/components/select/_select.scss
@@ -1,17 +1,17 @@
 @import '../../global/mixins/form-items';
 
 .#{$prefix}select {
-  border: $border-width solid $ray-color-gray-60;
+  border: $ray-border-width solid $ray-color-gray-60;
   background-color: $ray-color-white;
-  border-radius: $border-radius;
+  border-radius: $ray-border-radius;
   position: relative;
-  height: $field-height;
+  height: $ray-field-height;
 
   &::after {
     content: '';
     pointer-events: none;
     position: absolute;
-    right: $field-h-spacing;
+    right: $ray-field-h-spacing;
     top: 0px;
     bottom: 0px;
     width: 0px;
@@ -32,14 +32,14 @@
   &__input {
     appearance: none;
     font-family: inherit;
-    border-radius: $border-radius;
+    border-radius: $ray-border-radius;
     line-height: 1;
     width: 100%;
     height: 100%;
-    font-size: $field-label-size;
+    font-size: $ray-field-label-size;
     display: block;
     background-color: transparent;
-    padding: 0 $field-h-spacing;
+    padding: 0 $ray-field-h-spacing;
     outline: 0;
     border: 0;
     cursor: pointer;
@@ -95,7 +95,7 @@
   }
 
   &--compact {
-    height: $field-height-compact;
+    height: $ray-field-height-compact;
 
     .#{$prefix}select__label {
       display: flex;
