--- a/packages/ray/lib/global/_functions.scss
+++ b/packages/ray/lib/global/_functions.scss
@@ -26,7 +26,7 @@
   $values: map-values($map);
   $first-value: nth($values, 1);
   @if $first-value != 0 {
-    @warn "First breakpoint in `$grid-breakpoints` must start at 0, but starts at #{$first-value}.";
+    @warn "First breakpoint in `$ray-grid-breakpoints` must start at 0, but starts at #{$first-value}.";
   }
 }
 
