--- a/packages/ray/lib/global/mixins/_form-items.scss
+++ b/packages/ray/lib/global/mixins/_form-items.scss
@@ -1,17 +1,17 @@
 @mixin label {
   @include no-select;
 
-  font-family: $font-stack-mono;
-  font-size: $field-label-size;
+  font-family: $ray-font-stack-mono;
+  font-size: $ray-field-label-size;
   line-height: 1;
   font-weight: 400;
   display: block;
   position: absolute;
   top: 0;
   left: 0;
-  padding-left: $field-h-spacing;
-  padding-right: $field-h-spacing;
-  padding-top: $field-v-spacing;
+  padding-left: $ray-field-h-spacing;
+  padding-right: $ray-field-h-spacing;
+  padding-top: $ray-field-v-spacing;
   color: $ray-color-text-medium;
   transition: padding 0.2s ease;
   height: 100%;
@@ -26,14 +26,14 @@
 }
 
 @mixin label--active {
-  font-size: $field-label-size-focus;
+  font-size: $ray-field-label-size-focus;
   padding-top: 0;
   pointer-events: none;
 
-  top: -$field-h-spacing / 2;
-  left: $field-h-spacing / 2;
-  padding-left: $field-h-spacing / 2;
-  padding-right: $field-h-spacing / 2;
+  top: -$ray-field-h-spacing / 2;
+  left: $ray-field-h-spacing / 2;
+  padding-left: $ray-field-h-spacing / 2;
+  padding-right: $ray-field-h-spacing / 2;
   width: auto;
   height: auto;
   background: $ray-color-white;
@@ -49,7 +49,7 @@
   }
 
   to {
-    height: $border-radius;
+    height: $ray-border-radius;
     opacity: 0;
   }
 }
