--- a/packages/ray/lib/global/_variables.scss
+++ b/packages/ray/lib/global/_variables.scss
@@ -1,13 +1,14 @@
 @import './functions';
-$prefix: 'ray-';
+
+$ray-class-prefix: 'ray-';
 $ray-font-stack-sans-serif: 'Apercu', Avenir, -apple-system, BlinkMacSystemFont,
-  'Helvetica Neue', Helvetica, 'Calibri', 'Roboto', Arial, sans-serif !default;
-$ray-font-stack-mono: 'Apercu Mono', monospace !default;
+  'Helvetica Neue', Helvetica, 'Calibri', 'Roboto', Arial, sans-serif;
+$ray-font-stack-mono: 'Apercu Mono', monospace;
 
 $ray-transition: all 0.125s ease;
 
-$ray-border-radius: 0.25rem !default;
-$ray-border-width: 1px !default;
+$ray-border-radius: 0.25rem;
+$ray-border-width: 1px;
 
 $ray-color-text-light: $ray-color-gray-30;
 $ray-color-text-medium: $ray-color-gray-60;
@@ -52,5 +53,3 @@ $ray-container-gutters: (
 
 @include _assert-ascending($ray-grid-breakpoints, '$ray-grid-breakpoints');
 @include _assert-starts-at-zero($ray-grid-breakpoints);
-
-$ray-enable-grid-classes: true !default;
