--- a/packages/ray/lib/global/material-grid/_variables.scss
+++ b/packages/ray/lib/global/material-grid/_variables.scss
@@ -55,4 +55,4 @@ $mdc-layout-grid-max-width: (
 ) !default;
 
 $mdc-layout-grid-default-column-span: 4 !default;
-$mdc-prefix: $prefix;
+$mdc-prefix: $ray-class-prefix;
