--- a/packages/ray/lib/components/tabs/_tabs.scss
+++ b/packages/ray/lib/components/tabs/_tabs.scss
@@ -1,11 +1,11 @@
 $tabs-border-size: 1px;
 
-.#{$prefix}tabs {
+.#{$ray-class-prefix}tabs {
   border-bottom: $tabs-border-size solid $ray-color-blue-50;
   display: flex;
 
   &__item {
-    @extend .#{$prefix}p3;
+    @extend .#{$ray-class-prefix}p3;
     display: block;
     cursor: pointer;
     color: $ray-color-blue-50;
