fix(image): add default border radius (#49)

--- a/packages/ray/lib/components/card/_card.scss
+++ b/packages/ray/lib/components/card/_card.scss
@@ -21,4 +21,16 @@ $card-border-color: $ray-color-gray-10;
       border-top: 0;
     }
   }
+
+  &__image {
+    &:first-child {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &:last-child {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  }
 }
