--- a/packages/ray/lib/global/_variables.scss
+++ b/packages/ray/lib/global/_variables.scss
@@ -21,6 +21,7 @@ $ray-field-label-size: 1rem;
 $ray-field-label-size-focus: 12px;
 $ray-field-height: 56px;
 $ray-field-height-compact: 40px;
+$ray-field-font-size: 16px;
 $ray-field-line-height: 28px;
 
 $ray-btn-v-spacing: 20px - $ray-border-width;
