fix(card): add stories with anchor tags and fix styles (#52)

--- a/packages/ray/lib/components/card/_card.scss
+++ b/packages/ray/lib/components/card/_card.scss
@@ -12,6 +12,12 @@ $card-border-color: $ray-color-gray-10;
 
   &--link {
     cursor: pointer;
+    color: $ray-color-text-dark;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
 
     &:hover {
       &::after {
