fix(select): fix example invalid html

--- a/packages/ray/lib/components/select/select.html
+++ b/packages/ray/lib/components/select/select.html
@@ -1,6 +1,6 @@
 <div class="ray-select">
   <select class="ray-select__input">
-    <option value="" disabled selected data-ray-placeholder />
+    <option value="" disabled selected data-ray-placeholder></option>
     <option value="Pikatchu">Pikatchu</option>
     <option value="Squirtle">Squirtle</option>
     <option value="Squirtle">Charmander</option>
