fix(select): ie11 visual fixes (#9)
* fix(select): placeholder should not be visible on ie11

* fix(selects): remove ie11 default dropdown graphic

--- a/packages/core/lib/components/select/_select.scss
+++ b/packages/core/lib/components/select/_select.scss
@@ -43,7 +43,11 @@
     outline: 0;
     border: 0;
     cursor: pointer;
-    color: transparent;
+    color: rgba(0, 0, 0, 0);
+
+    &::-ms-expand {
+      display: none;
+    }
   }
 
   &--has-value {
